# cedros-login

./: .gitignore  LICENSE  README.md
server-rust/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
server-rust/migrations/: 20241212000001_initial_schema.sql  20241212000002_verification_tokens.sql  20241213000001_add_partial_indexes.sql  20241214000001_orgs_and_memberships.sql  20241215000001_outbox_events.sql  20241216000001_mfa_policies_roles_login_attempts.sql  20241231000001_audit_composite_indexes.sql  20251231000001_api_keys.sql  20260102000001_case_insensitive_email_index.sql  20260102000002_performance_indexes.sql  20260104000001_login_attempts_composite_index.sql  20260105000001_outbox_delivered_at.sql  20260105000002_invite_pending_composite_index.sql  20260105000003_session_expires_at_index.sql  20260106000000_totp_replay_protection.sql  20260106000001_add_apple_id.sql  20260106000002_audit_session_id.sql  20260107000001_solana_wallet_material.sql  20260107000002_user_credentials.sql  20260107000003_webauthn.sql  20260107000004_session_strong_auth_and_sso.sql  20260108000001_webauthn_user_credentials_index.sql  20260108000002_audit_session_composite_index.sql  20260109000001_wallet_v2_server_signing.sql  20260109000002_drop_redundant_audit_index.sql  20260109000003_session_revoked_reason.sql  20260110000001_memberships_composite_indexes.sql  20260111000001_add_uuid_defaults.sql  20260111000002_wallet_v1_cleanup_plan.sql  20260111000003_nullable_fields_rationale.sql  20260120000001_privacy_deposits.sql  20260121000001_deposit_sessions_withdrawal_columns.sql  20260121000002_credit_holds.sql  20260123000001_spl_deposit_tracking.sql  20260123000002_partial_withdrawal_tracking.sql  20260124000001_wallet_v2_consolidation.sql  20260125000001_system_settings.sql  20260126000001_withdrawal_history.sql  20260127000001_withdrawal_min_lamports.sql  20260128000001_deposit_type_tracking.sql  (+47 more)
server-rust/src/: lib.rs  main.rs  openapi.json  router.rs
server-rust/src/callback/: mod.rs
server-rust/src/config/: auth.rs  database.rs  jwt.rs  loader.rs  mod.rs  network.rs  privacy.rs  server.rs  services.rs  webauthn.rs
server-rust/src/errors/: mod.rs
server-rust/src/handlers/: api_keys.rs  apple.rs  authorize.rs  credentials.rs  credit_operations.rs  credits.rs  custom_roles.rs  deposit.rs  deposit_tiered.rs  discovery.rs  email_verification.rs  features.rs  google.rs  health.rs  instant_link.rs  metrics.rs  mfa.rs  mod.rs  password_change.rs  password_reset.rs  policies.rs  prices.rs  sessions.rs  setup.rs  solana.rs  sso.rs  user_lookup.rs  user_withdrawal.rs  wallet.rs  webauthn.rs  webhook.rs
server-rust/src/middleware/: csrf.rs  mod.rs  request_id.rs
server-rust/src/models/: admin.rs  api_key.rs  audit.rs  credit.rs  deposit.rs  invite.rs  mod.rs  org.rs  session.rs  sso.rs  wallet.rs
server-rust/src/repositories/: api_key_repository.rs  audit_repository.rs  credential_repository.rs  credit_hold_repository.rs  credit_refund_request_repository.rs  credit_repository.rs  custom_role_repository.rs  deposit_repository.rs  (+25 more)
(+211 files in other folders)
